# preemptrt-gpiotest

./: CMakeLists.txt  README.md  preemptrt-gpiotest.c
check_clocks/: CMakeLists.txt  check_clocks.c
cmake/: arm-buildroot-linux-uclibcgnueabihf.cmake
